# maxyfold

./: .gitignore  README.md  dir_context.py  pyproject.toml
configs/: pipeline.yaml  train_pdb.yaml
configs/data/: mnist.yaml  pdb.yaml
configs/logger/: wandb.yaml
configs/model/: mnist.yaml
configs/paths/: default.yaml  pdb.yaml
configs/query/: pdb.yaml
configs/split/: mmseqs2.yaml
configs/storage/: lmdb.yaml
scripts/: analyze_gaps.py  screen_residue_gaps.py
scripts/data/: build_ccd_mapping.sh  inspect_dataset.py
scripts/git_utils/: delete_old_branch.sh
src/maxyfold/: eval.py  main.py  pipeline.py  train.py
src/maxyfold/data/: __init__.py  atom_constants.py  pipeline.py
src/maxyfold/data/analysis/: analyze_atoms.py  analyze_dataset_dimensions.py  analyze_pdb_atom_frequencies.py  ccd_example.py  debug_pdb_scan.py
src/maxyfold/data/components/: backend.py  lmdb_backend.py  tarball_reader.py  tarball_writer.py
src/maxyfold/data/constants/: __init__.py  atom_constants.py  build_ccd_mapping.py  build_ligand_atom_mapping.py
src/maxyfold/data/cropping/: croppers.py
src/maxyfold/data/datamodules/: pdb_datamodule.py
src/maxyfold/data/datasets/: pdb_dataset.py
src/maxyfold/data/download/: pdb_downloader.py
src/maxyfold/data/processing/: all_atom_processor.py  pdb_processor.py
src/maxyfold/data/splits/: pdb_manifest.py  pdb_splitter.py
src/maxyfold/data/storage/: base.py  lmdb.py  lmdb_io.py
tests/: test_all_atom_processor.py  test_croppers.py  test_pdb_processor.py  test_splitter.py  test_structure.py
